# hashcode2020

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  archive.sh  testall.sh
.reuse/: dep5
src/: CMakeLists.txt  hashcode.c  hashcode.h  main.c
t/: CMakeLists.txt  example_test.c  hashcode_test.c  practice_round_test.c
